--- a/src/db/tasks.json
+++ b/src/db/tasks.json
@@ -11,7 +11,8 @@
     "title": "Build a REST API",
     "description": "Create CRUD endpoints using Express.js.",
     "completed": false,
-    "createdAt": "2025-01-12T14:30:00.000Z"
+    "createdAt": "2025-01-12T14:30:00.000Z",
+    "updatedAt": "2026-01-31T23:40:39.193Z"
   },
   {
     "id": "seed-3",
